recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:9: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^PentaKoch:11: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^PentaKoch:13: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^PentaKoch:15: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^PentaKoch:17: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^PentaKoch:19: error: not found: value squareSide
		squareSide(levels-1, lengths);
                ^