recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if(levels == 0) {
		avance(length);
	}
	else {
		val lengths = length*0.4;
		val angle = 180/5;
		squareSide(levels-1, lengths);
		gauche(2*angle);
		squareSide(levels-1, lengths);
		droite(angle);
		squareSide(levels-1, lengths);
		droite(angle);
		squareSide(levels-1, lengths);
		droite(angle);
		squareSide(levels-1, lengths);
		gauche(2*angle);
		squareSide(levels-1, lengths);
	}
}
